java/java-tests/testData/codeInsight/daemonCodeAnalyzer/lambda/params/IncompatibleTypes.java
class XXX {
  Runnable bar() {
    return <error descr="Incompatible parameter types in lambda expression">(o)->{
      System.out.println();
    }</error>;
  }
}